docs layout: Fix case where side nav links can overlap

--- a/layouts/partials/css/academic.css
+++ b/layouts/partials/css/academic.css
@@ -1656,7 +1656,7 @@ div.alert a {
   background-color: transparent;
 }
 
-.docs-toc-item.active>.docs-sidenav {
+.docs-sidenav {
   display: block;
 }
 
